test_cases/positive/forward_reference_label.snek
export DEFAULT = foo;
foo = 10;
