test_cases/negative/default_not_label.snek
export def DEFAULT() {
    return 10;
}
